# mnemonic-sdks

./: .gitignore  LICENSE  README.md
javascript/: package.json
javascript/examples/: examples.ts
javascript/src/: client.ts  errors.ts  index.ts  types.ts
mcp/: README.md  package.json
mcp/src/: index.ts
python/: README.md  pyproject.toml
python/examples/: basic_example.py
python/mnemonic/: __init__.py  async_client.py  client.py  exceptions.py  models.py  setup.py  utils.py
python/mnemonic/integrations/: __init__.py  claude.py  langchain.py  openai.py
python/mnemonic/integrations/claudecode/: __init__.py  hook.py
