[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemonic-sdk"
version = "0.1.0"
description = "Persistent cognitive infrastructure for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Mnemo Labs" }]
keywords = ["llm", "agents", "memory", "reflection", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
all = ["openai>=1.0.0", "anthropic>=0.25.0"]

[project.scripts]
mnemo-setup = "mnemo.setup:run"

[tool.hatch.build.targets.wheel]
packages = ["mnemo"]
